<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewModel"
            type="com.edu.hoang.ui.dashboard.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.dashboard.DashboardFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/id_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView78" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/age_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/job_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/i_card_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/address_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contact_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/height_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView78" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/weight_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sex_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/begin_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView53" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/country_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_treatment_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/symptoms_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/history_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/type_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.contact}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.country}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
            app:layout_constraintStart_toEndOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.history}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView53"
            app:layout_constraintStart_toEndOf="@+id/textView53" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.address}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.usualSymptom}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView52"
            app:layout_constraintStart_toEndOf="@+id/textView52" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.type}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView54"
            app:layout_constraintStart_toEndOf="@+id/textView54" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.card}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.job}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.name}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.id}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.height}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
            app:layout_constraintStart_toEndOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.weight}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
            app:layout_constraintStart_toEndOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.sex}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
            app:layout_constraintStart_toEndOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.age}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.startTreatment}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
            app:layout_constraintStart_toEndOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.begin}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
            app:layout_constraintStart_toEndOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView78"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/personal_information_label"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView78"
            app:layout_constraintEnd_toStartOf="@+id/textView78"
            app:layout_constraintTop_toTopOf="@+id/textView78"
            app:srcCompat="@drawable/ic_personal_information"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
            app:layout_constraintStart_toEndOf="@+id/textView70" />

        <TextView
            android:id="@+id/textView96"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
            app:layout_constraintStart_toEndOf="@+id/textView69" />

        <TextView
            android:id="@+id/textView97"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/years_old_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView58" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>